styles/style.css
* {
    margin: 0;
    padding: 0;
}
#container {  
    position: relative;
    flex-direction: column;
    min-height: 100vh;
    top: 0;
    width: 100%; 
   
    /* box-sizing: border-box; */
    
}


div {
    display: block;
    text-align: center;
       
}


input {
    
    width:  560px;
    height: 44px;   
    border-radius: calc(0.5 * 44px);
    outline: none;
    text-rendering: auto;   
    letter-spacing: normal;
    word-spacing: normal;
    text-transform: none;
    text-indent: 35px;
    text-shadow: none;
    appearance: auto; 
    -webkit-rtl-ordering: logical;
    cursor: text;
    margin: 0em;
    font: 400 13.3333px Arial;
    padding: 1px 2px;
    border-width: 1px;
    border-color: rgb(218, 220, 224);
    border-image: initial;
    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28);
    font-size: 16px;
    border-style: none;
}

input:focus::-webkit-input-placeholder
{
    color: transparent;
}

#userInput::placeholder{
    position: absolute;
    margin-left: 10px;
    margin-top: 15px;
    border-style: none;

}
  
p {
    font-style: italic;
    font-weight: 200;
}


#topLinks {
    display: flex;
    list-style-type: none;
    margin-top: 0;
    padding: 0;
    color: black; 
    justify-content: space-between;
   
  
  }

  span {
      display: flex;
      align-items: center;     
  }

li {
    
    padding: 8px;  
    justify-content: center;
    font-size: 14px;
    text-decoration: none;
    color: black;
    
 
    
}
li a{
    text-align: center;
    text-decoration: none;
    color: black;
    font-family: Arial, sans-serif;
    font-size: 15px;
    opacity: 70%;
    
}


li img{
    padding: 6px;
    

}


#inputBoxContainer{
    display: block;
    text-align: center;
    position: relative;
    padding: 10px;
}



#voiceIcon {
    position: absolute;
    margin-left: -50px;
    margin-top: 5px;
    
   
}

#searchIcon {
    position: absolute;
    margin-left:5px;
    margin-top: 5px;   
    
}

#logo img{
    height: 180px; 
}

#logoInputContainer {
    margin-top: 120px;
    display: block;
    position: relative;   

}

#googleSearchButtons{
    padding: 20px;
    padding-bottom: 2.5rem;
 
}

button{
    border: none;
    color: gray;
    padding: 10px 25px;
    font-size: 15px;
    border-radius: 6px;

}
button:hover{
    border-color: darkgray;
    border-style: solid;
    border-width: thin;
    
}

a:hover{
    text-decoration: underline;
}

#bottomLinks {
    
    display: flex;  
    position: absolute;
    justify-content: space-between;
    list-style-type: none;
    bottom: 0;
    width: 100%;
    margin-left: 0;
    margin-bottom: 0;
    padding: 0;
    background-color: #f3f0f0f8;
    height: 2.5rem;
   
}

#bottomLinks span{
    margin-bottom: 0;
}


#appIcon:hover{
    cursor: pointer;
    opacity: 1.5;
}

#appIcon {
    opacity: 0.7;
      
}

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
    -webkit-appearance: none;
    appearance: none;
}

